--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,7 +50,7 @@
         <source  id="home-hero" srcset="./images/home-hero-small.webp" media="(max-width: 500px)" width="500px" height="500px">
         <img id="home-hero" src="./images/home-hero-large.webp" alt="Grand Tetons" width="1280px" height="">
       </picture>
-      <h1 id="home-title">Jackson Hole Chamber of Commerce</h1>
+        <h1 id="home-title">Jackson Hole Chamber of Commerce</h1>
       <div id="weather-card">
         <h3>Weather</h3>
         <p>Weather Information</p>
@@ -62,10 +62,12 @@
         <button>Join Now!</button>
       </div>
       <div id="events-container">
-        <h1>Events</h1>
+        <h1>Upcoming Events</h1>
         <section id="event1" class="home-card">
-          <div class="img-placeholder"></div>
-          <h2>Event 1 Title</h2>
+          <picture>
+            <img class="events-img" src="./images/event1-img.webp" alt="Social Media Icons" width="325px" height="325px">
+          </picture>
+          <h2>Social Media Marketing Seminar</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -74,8 +76,10 @@
           </p>
         </section>
         <section id="event2" class="home-card">
-          <div class="img-placeholder"></div>
-          <h2>Event 2 Title</h2>
+          <picture>
+            <img class="events-img" src="./images/event2-img.webp" alt="Mountains" width="325px" height="325px">
+          </picture>
+          <h2>2023 Tourism Report</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -84,8 +88,10 @@
           </p>
         </section>
         <section id="event3" class="home-card">
-          <div class="img-placeholder"></div>
-          <h2>Event 3 Title</h2>
+          <picture>
+            <img class="events-img" src="./images/event3-img.webp" alt="Christmas Lights" width="325px" height="325px">
+          </picture>
+          <h2>Tree Lighting Ceremony</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -94,10 +100,10 @@
           </p>
         </section>
       </div>
+      <h1 id="spotlight-title">Spotlights</h1>
       <div id="spotlights-container">
-        <h1>Spotlights</h1>
-        <section class="home-card">
-          <div class="img-placeholder"></div>
+        <section class="home-card"">
+          <div class="img-placeholder""></div>
           <h2>Business 1</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
