--- a/chamber/index.html
+++ b/chamber/index.html
@@ -65,7 +65,7 @@
         <h1>Upcoming Events</h1>
         <section id="event1" class="home-card">
           <picture>
-            <img class="events-img" src="./images/event1-img.webp" alt="Social Media Icons" width="325px" height="325px">
+            <img class="events-img" src="./images/event1-img.webp" alt="Social Media Icons" width="325px" height="325px" loading="lazy">
           </picture>
           <h2>Social Media Marketing Seminar</h2>
           <p>
@@ -77,7 +77,7 @@
         </section>
         <section id="event2" class="home-card">
           <picture>
-            <img class="events-img" src="./images/event2-img.webp" alt="Mountains" width="325px" height="325px">
+            <img class="events-img" src="./images/event2-img.webp" alt="Mountains" width="325px" height="325px" loading="lazy">
           </picture>
           <h2>2023 Tourism Report</h2>
           <p>
@@ -89,7 +89,7 @@
         </section>
         <section id="event3" class="home-card">
           <picture>
-            <img class="events-img" src="./images/event3-img.webp" alt="Christmas Lights" width="325px" height="325px">
+            <img class="events-img" src="./images/event3-img.webp" alt="Christmas Lights" width="325px" height="325px" loading="lazy">
           </picture>
           <h2>Tree Lighting Ceremony</h2>
           <p>
