--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       property="og:title"
       content="Brenleigh Killpack - WDD 230 - Web Frontend Development"
     />
-    <meta property="og:type" content="website" >
+    <meta property="og:type" content="website"/>
     <meta
       property="og:image"
       content="https://images.squarespace-cdn.com/content/v1/591f55e39f74565ba4db26d8/1496178430380-4JV9F16G3MKV4RSTZMVH/Spud+Day--Parade0068.jpeg"
