--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jackson Hole Chamber of Commerce | Home</title>
     <meta
@@ -13,7 +13,7 @@
       property="og:title"
       content="Jackson Hole Chamber of Commerce | Home"
     />
-    <meta property="og:type" content="website" >
+    <meta property="og:type" content="website" />
     <meta
       property="og:image"
       content="https://cdn4.picryl.com/photo/2016/01/01/one-of-four-large-arches-of-elk-antler-in-the-town-square-of-jackson-hole-wyoming-be953a-1024.jpg"
@@ -50,7 +50,7 @@
         <source  id="home-hero" srcset="./images/home-hero-small.webp" media="(max-width: 500px)" width="500px" height="500px">
         <img id="home-hero" src="./images/home-hero-large.webp" alt="Grand Tetons" width="1280px" height="">
       </picture>
-        <h1 id="home-title">Jackson Hole Chamber of Commerce</h1>
+      <h1 id="home-title">Jackson Hole Chamber of Commerce</h1>
       <div id="weather-card">
         <h3>Weather</h3>
         <p>Weather Information</p>
