--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,9 +33,9 @@
         <source
           srcset="./images/logo-test.webp"
           media="(max-width: 500px)"
-          width="200px"
+          width="200"
         />
-        <img id="logo" src="./images/logo-test.webp" alt="Logo" width="375px" />
+        <img id="logo" src="./images/logo-test.webp" alt="Logo" width="375" />
       </picture>
       <nav>
         <button id="menu"></button>
@@ -52,17 +52,16 @@
     <main>
       <picture>
         <source
-          id="home-hero"
           srcset="./images/home-hero-small.webp"
           media="(max-width: 500px)"
-          width="500px"
-          height="500px"
+          width="500"
+          height="500"
         />
         <img
           id="home-hero"
           src="./images/home-hero-large.webp"
           alt="Grand Tetons"
-          width="1280px"
+          width="1280"
           height=""
         />
       </picture>
@@ -86,16 +85,15 @@
             <source
               srcset="./images/event1-img.webp"
               media="(max-width: 500px)"
-              width="250px"
-              height="250px"
-              loading="lazy"
+              width="250"
+              height="250"
             />
             <img
               class="events-img"
               src="./images/event1-img.webp"
               alt="Social Media Icons"
-              width="300px"
-              height="300px"
+              width="300"
+              height="300"
               loading="lazy"
             />
           </picture>
@@ -109,16 +107,15 @@
             <source
               srcset="./images/event2-img.webp"
               media="(max-width: 500px)"
-              width="250px"
-              height="250px"
-              loading="lazy"
+              width="250"
+              height="250"
             />
             <img
               class="events-img"
               src="./images/event2-img.webp"
               alt="Mountains"
-              width="300px"
-              height="300px"
+              width="300"
+              height="300"
               loading="lazy"
             />
           </picture>
@@ -132,16 +129,15 @@
             <source
               srcset="./images/event3-img.webp"
               media="(max-width: 500px)"
-              width="250px"
-              height="250px"
-              lazy="loading"
+              width="250"
+              height="250"
             />
             <img
               class="events-img"
               src="./images/event3-img.webp"
               alt="Christmas Lights"
-              width="300px"
-              height="300px"
+              width="300"
+              height="300"
               loading="lazy"
             />
           </picture>
@@ -159,7 +155,6 @@
             media="(max-width: 500px)"
             width="300"
             height="300"
-            loading="lazy"
           />
           <img
             class="spotlight-img"
@@ -194,7 +189,6 @@
             media="(max-width: 500px)"
             width="300"
             height="300"
-            loading="lazy"
           />
           <img
             class="spotlight-img"
@@ -227,7 +221,6 @@
             media="(max-width: 500px)"
             width="300"
             height="300"
-            loading="lazy"
           />
           <img
             class="spotlight-img"
