--- a/chamber/index.html
+++ b/chamber/index.html
@@ -62,7 +62,7 @@
           src="./images/home-hero-large.webp"
           alt="Grand Tetons"
           width="1280"
-          height=""
+          height="auto"
         />
       </picture>
       <h1 id="home-title">Jackson Hole Chamber of Commerce</h1>
@@ -147,7 +147,7 @@
           <p>10 E Broadway Ave, Jackson, WY 83001</p>
         </section>
       </div>
-      <h1 id="spotlight-title"> Business Spotlights</h1>
+      <h1 id="spotlight-title">Business Spotlights</h1>
       <div id="spotlights-container">
         <picture>
           <source
@@ -175,13 +175,13 @@
             favorite extreme sports surrounded by some of the most beautiful
             mountains on the planet.
           </p>
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            href="https://www.grandtarghee.com/?gclid=CjwKCAjwp8OpBhAFEiwAG7NaEkHiKs1U5HmkJMSgInkxXka5b1r-cEa8hCxdwaVYbhnncliSLzTKThoCFSwQAvD_BwE"
-          >
-            <button>View Business</button>
-          </a>
+          <div class="spotlight-button">
+            <a
+              target="_blank"
+              href="https://www.grandtarghee.com/?gclid=CjwKCAjwp8OpBhAFEiwAG7NaEh58Jborc7jxtWpY545PabfXWVc8QllbIQAVydIRQs8C22cd9hYfpBoCGwUQAvD_BwE"
+              >View Business</a
+            >
+          </div>
         </section>
         <picture>
           <source
@@ -207,13 +207,13 @@
             coffee beans to perfection. So much passion and time goes into
             creating the very best flavors.
           </p>
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            href="https://www.snakeriverroastingco.com/?utm_term=snake%20river%20roasting%20co&utm_campaign=SS+%7C+Branded&utm_source=adwords&utm_medium=ppc&hsa_acc=2624038396&hsa_cam=19994590470&hsa_grp=147777150629&hsa_ad=607070570561&hsa_src=g&hsa_tgt=kwd-2009719993125&hsa_kw=snake%20river%20roasting%20co&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gclid=CjwKCAjwp8OpBhAFEiwAG7NaEmZ-l1Q6yWozu70VNjS2nPHGB3SajsWK2ZYJiznoKjo3ZZ70RZtAZRoCSBEQAvD_BwE"
-          >
-            <button>View Business</button>
-          </a>
+          <div class="spotlight-button">
+            <a
+              target="_blank"
+              href="https://www.snakeriverroastingco.com/?utm_term=snake%20river%20roasting%20co&utm_campaign=SS+%7C+Branded&utm_source=adwords&utm_medium=ppc&hsa_acc=2624038396&hsa_cam=19994590470&hsa_grp=147777150629&hsa_ad=607070570561&hsa_src=g&hsa_tgt=kwd-2009719993125&hsa_kw=snake%20river%20roasting%20co&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gclid=CjwKCAjwp8OpBhAFEiwAG7NaEliWbbvJlI0-zUaGZp_kT-JyRBECPce45jBlEOYi77bKt5FFn-KU8RoCKcQQAvD_BwE"
+              >View Business</a
+            >
+          </div>
         </section>
         <picture>
           <source
@@ -239,9 +239,13 @@
             for all ages and levels of experience. It's a great way to
             experience Jackson Hole-if you're willing to get a little wet!
           </p>
-          <a target="_blank" rel="noopener noreferrer" href="https://www.davehansenwhitewater.com/">
-            <button>View Business</button>
-          </a>
+          <div class="spotlight-button">
+            <a
+              target="_blank"
+              href="https://www.davehansenwhitewater.com/?utm_source=Adwords&utm_medium=cpc&utm_campaign=Campaign%3A%20local%20text%20BrComp&gad=1&gclid=CjwKCAjwp8OpBhAFEiwAG7NaEsgqMrhxVA7GHHASKWzqAIS2kzjcSvEd7t2WM_xjUjGgd8CJK5B4uRoC-7kQAvD_BwE"
+              >View Business</a
+            >
+          </div>
         </section>
       </div>
       <footer>
