--- a/chamber/index.html
+++ b/chamber/index.html
@@ -62,7 +62,7 @@
           src="./images/home-hero-large.webp"
           alt="Grand Tetons"
           width="1280"
-          height="auto"
+          height="725"
         />
       </picture>
       <h1 id="home-title">Jackson Hole Chamber of Commerce</h1>
