--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,7 +42,7 @@
         <ul class="navigation">
           <li>
             <a href="./index.html">Home</a>
-            <a href="">Discover</a>
+            <a href="./discover.html">Discover</a>
             <a href="">Directory</a>
             <a href="">Join</a>
           </li>
