--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jackson Hole Chamber of Commerce | Home</title>
+    <title>Jackson Hole Chamber of Commerce | Discover</title>
     <meta
       name="description"
       content="Home page for the Jackson Hole Chamber of Commerce"
