--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -6,7 +6,7 @@
     <title>Jackson Hole Chamber of Commerce | Discover</title>
     <meta
       name="description"
-      content="Home page for the Jackson Hole Chamber of Commerce"
+      content="Discover page for the Jackson Hole Chamber of Commerce"
     />
     <meta name="author" content="Brenleigh Killpack" />
     <meta
@@ -50,6 +50,7 @@
       </nav>
     </header>
     <main>
+      <h1 class="discover-title">Discover Jackson Hole</h1>
       <div class="discover-grid">
         <div class="left">
           <section class="visits">
@@ -59,8 +60,9 @@
             <h2>Weather</h2>
             <div></div>
           </section>
-          <section class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23109.793657390986!2d-110.72602914682088!3d43.612283672779725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53530fe335ea3d45%3A0x3252c9dbaac6965a!2sJackson%20Hole!5e0!3m2!1sen!2sus!4v1697837223217!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <section class="stats">
+            <h2>Statistics</h2>
+            <p>Fill with content.</p>
           </section>
           <section class="attractions">
             <h2>Attractions</h2>
