--- a/index.html
+++ b/index.html
@@ -52,25 +52,27 @@
       </ul>
     </nav>
     <main>
-      <picture>
-        <source
-          srcset="./home-page/images/hero-small.webp"
-          media="(max-width: 500px)"
-        />
-        <source
-          srcset="./home-page/images/hero-medium.webp"
-          media="(max-width: 1000px)"
-        />
-        <img
-          class="hero-img"
-          src="./home-page/images/hero-large.webp"
-          alt="Idaho Falls Temple"
-          width="1500"
-          height="750"
-        />
-      </picture>
-      <div id="hero-label">
-        <p>Idaho Falls Temple</p>
+      <div id="hero">
+        <picture>
+          <source
+            srcset="./home-page/images/hero-small.webp"
+            media="(max-width: 500px)"
+          />
+          <source
+            srcset="./home-page/images/hero-medium.webp"
+            media="(max-width: 1000px)"
+          />
+          <img
+            class="hero-img"
+            src="./home-page/images/hero-large.webp"
+            alt="Idaho Falls Temple"
+            width="1500"
+            height="750"
+          />
+        </picture>
+        <div id="hero-label">
+          <p>Idaho Falls Temple</p>
+        </div>
       </div>
       <h2>WDD 230: Web Frontend Development</h2>
       <div class="container">
