--- a/chamber/index.html
+++ b/chamber/index.html
@@ -65,9 +65,11 @@
           height="725"
         />
       </picture>
-      <h1 id="home-title">Jackson Hole Chamber of Commerce</h1>
       <div id="weather-card">
         <p>Weather - 🌞 55°F</p>
+      </div>
+      <div id="title-container">
+        <h1 id="home-title">Jackson Hole Chamber of Commerce</h1>
       </div>
       <div id="join-card">
         <p>
