--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jackson Hole Chamber of Commerce | Discover</title>
     <meta
@@ -11,7 +11,7 @@
     <meta name="author" content="Brenleigh Killpack" />
     <meta
       property="og:title"
-      content="Jackson Hole Chamber of Commerce | Home"
+      content="Jackson Hole Chamber of Commerce | Discover"
     />
     <meta property="og:type" content="website" />
     <meta
