--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -128,32 +128,32 @@
           <picture>
             <source srcset="./images/discover-img1.webp" media="(max-width: 500px)" width="400" height="200">
             <img src="./images/discover-img1.webp" alt="The Mormon Barn" width="600" height="400" loading="lazy">
-            <figcaption>The Mormon Barn - Grand Teton National Park</figcaption>
+            <p>The Mormon Barn - Grand Teton National Park</p>
           </picture>
           <picture>
             <source srcset="./images/discover-img2.webp" media="(max-width: 500px)" width="400" height="200">
             <img src="./images/discover-img2.webp" alt="Downtown Jackson" width="600" height="400" loading="lazy">
-            <figcaption>Downtown Jackson, WY</figcaption>
+            <p>Downtown Jackson, WY</p>
           </picture>
           <picture>
             <source srcset="./images/discover-img3.webp" media="(max-width: 500px)" width="400" height="200">
             <img src="./images/discover-img3.webp" alt="Schwabacher Landing" width="600" height="400" loading="lazy">
-            <figcaption>Schwabacher Landing - Grand Teton National Park</figcaption>
+            <p>Schwabacher Landing - Grand Teton National Park</p>
           </picture>
           <picture>
             <source srcset="./images/discover-img4.webp" media="(max-width: 500px)" width="400" height="200">
             <img src="./images/discover-img4.webp" alt="Skiing Corbet's Couloir" width="600" height="400" loading="lazy">
-            <figcaption>Corbet's Couloir - Jackson Hole Mountain Resort</figcaption>
+            <p>Corbet's Couloir - Jackson Hole Mountain Resort</p>
           </picture>
           <picture>
             <source srcset="./images/discover-img5.webp" media="(max-width: 500px)" width="400" height="200">
             <img src="./images/discover-img5.webp" alt="The Lodge at Jackson Hole" width="600" height="400" loading="lazy">
-            <figcaption>The Lodge at Jackson Hole</figcaption>
+            <p>The Lodge at Jackson Hole</p>
           </picture>
           <picture>
             <source srcset="./images/discover-img6.webp" media="(max-width: 500px)" width="400" height="200">
             <img src="./images/discover-img6.webp" alt="Teton Village" width="600" height="400" loading="lazy">
-            <figcaption id="bottom-caption">Teton Village - Jackson Hole Mountain Resort</figcaption>
+            <p id="bottom-caption">Teton Village - Jackson Hole Mountain Resort</p>
           </picture>
         </div>
       </div>
