--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -57,12 +57,31 @@
             <span id="visits"></span>
           </section>
           <section class="weather">
-            <h2>Weather</h2>
+            <h2>Snow Report</h2>
+            <h3>Grand Targhee Resort</h3>
+            <p>Overnight - 0"</p>
+            <p>24 HR - 12"</p>
+            <p>48 HR - 12"</p>
+            <p>Depth - 8"</p>
+            <p>Season - 12"</p>
+            <h3>Jackson Hole Mountain Resort</h3>
+            <p>Overnight - 0"</p>
+            <p>24 HR - 0"</p>
+            <p>48 HR - 0"</p>
+            <p>Depth - 0"</p>
+            <p>Season - 14"</p>
+            <h4>Last Updated: 10/24/2023</h4>
             <div></div>
           </section>
           <section class="stats">
-            <h2>Statistics</h2>
-            <p>Fill with content.</p>
+            <h2>Popular Sights</h2>
+            <h3>Jackson Town Square</h3>
+            <h3>National Museum of Wildlife Art</h3>
+            <h3>Antler Archers of Jackson</h3>
+            <h3>Cunningham Cabin</h3>
+            <h3>National Elk Refuge</h3>
+            <h3>Yellowstone National Park</h3>
+            <h3>Jackson Hole Playhouse</h3>
           </section>
           <section class="attractions">
             <h2>Attractions</h2>
@@ -127,43 +146,43 @@
         <div class="right">
           <div>
             <picture>
-              <source srcset="./images/discover-img12.webp" media="(max-width: 500px)" width="400" height="200">
-              <img src="./images/discover-img12.webp" alt="The Mormon Barn" width="600" height="400" loading="lazy">
+              <source srcset="./images/discover-img1small.webp" media="(max-width: 500px)" width="400" height="200">
+              <img src="./images/discover-img1.webp" alt="Mormon Row" width="600" height="400" loading="lazy">
             </picture>
-            <p>The Mormon Barn - Grand Teton National Park</p>
+            <p>Mormon Row - Grand Teton National Park</p>
           </div>
           <div>
             <picture>
-              <source srcset="./images/discover-img22.webp" media="(max-width: 500px)" width="400" height="200">
-              <img src="./images/discover-img22.webp" alt="Downtown Jackson" width="600" height="400" loading="lazy">
+              <source srcset="./images/discover-img2small.webp" media="(max-width: 500px)" width="400" height="200">
+              <img src="./images/discover-img2.webp" alt="Downtown Jackson" width="600" height="400" loading="lazy">
             </picture>
             <p>Downtown Jackson, WY</p>
           </div>
           <div>
             <picture>
-              <source srcset="./images/discover-img32.webp" media="(max-width: 500px)" width="400" height="200">
-              <img src="./images/discover-img32.webp" alt="Schwabacher Landing" width="600" height="400" loading="lazy">
+              <source srcset="./images/discover-img3small.webp" media="(max-width: 500px)" width="400" height="200">
+              <img src="./images/discover-img3.webp" alt="Schwabacher Landing" width="600" height="400" loading="lazy">
             </picture>
               <p>Schwabacher Landing - Grand Teton National Park</p>
           </div>
           <div>
             <picture>
-              <source srcset="./images/discover-img42.webp" media="(max-width: 500px)" width="400" height="200">
-              <img src="./images/discover-img42.webp" alt="Skiing Corbet's Couloir" width="600" height="400" loading="lazy">
+              <source srcset="./images/discover-img4small.webp" media="(max-width: 500px)" width="400" height="200">
+              <img src="./images/discover-img4.webp" alt="Skiing Corbet's Colouir" width="600" height="400" loading="lazy">
             </picture>
-            <p>Corbet's Couloir - Jackson Hole Mountain Resort</p>
+            <p>Corbet's Colouir - Jackson Hole Mountain Resort</p>
           </div>
           <div>
             <picture>
-              <source srcset="./images/discover-img52.webp" media="(max-width: 500px)" width="400" height="200">
-              <img src="./images/discover-img52.webp" alt="The Lodge at Jackson Hole" width="600" height="400" loading="lazy">
+              <source srcset="./images/discover-img5small.webp" media="(max-width: 500px)" width="400" height="200">
+              <img src="./images/discover-img5.webp" alt="Delta Lake" width="600" height="400" loading="lazy">
             </picture>
-            <p>The Lodge at Jackson Hole</p>
+            <p>Delta Lake - Grand Teton National Park</p>
           </div>
           <div>
             <picture>
-              <source srcset="./images/discover-img62.webp" media="(max-width: 500px)" width="400" height="200">
-              <img src="./images/discover-img62.webp" alt="Teton Village" width="600" height="400" loading="lazy">
+              <source srcset="./images/discover-img6small.webp" media="(max-width: 500px)" width="400" height="200">
+              <img src="./images/discover-img6.webp" alt="Teton Village" width="600" height="400" loading="lazy">
             </picture>
             <p id="bottom-caption">Teton Village - Jackson Hole Mountain Resort</p>
           </div>
