--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       property="og:title"
       content="Brenleigh Killpack - WDD 230 - Web Frontend Development"
     />
-    <meta property="og:type" content="website"/>
+    <meta property="og:type" content="website" />
     <meta
       property="og:image"
       content="https://images.squarespace-cdn.com/content/v1/591f55e39f74565ba4db26d8/1496178430380-4JV9F16G3MKV4RSTZMVH/Spud+Day--Parade0068.jpeg"
@@ -105,7 +105,15 @@
               ><span> | </span
               ><a href="./week03/local-storage.html">Local Storage</a>
             </li>
-            <li>Lesson 04:</li>
+            <li>
+              Lesson 04:
+              <a href="https://codepen.io/bkill16/pen/vYbOYxv?editors=1100"
+                >CSS Pseudo Classes</a
+              ><span> | </span
+              ><a href="./week04/images/week04-combinators.png"
+                >CSS Combinators</a
+              ><span> | </span>
+            </li>
             <li>Lesson 05:</li>
             <li>Lesson 06:</li>
             <li>Lesson 07:</li>
