--- a/week04/table-build.html
+++ b/week04/table-build.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="./table-build.css">
+<title>HTML Tables</title>
 <table>
     <caption>Table 1: Account Feature Comparison</caption>
     <thead>
