--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               ><span> | </span
               ><a href="./week04/images/week04-combinators.png"
                 >CSS Combinators</a
-              ><span> | </span>
+              ><span> | </span><a href="./week04/table-build.html">HTML Tables</a><span> | </span>
             </li>
             <li>Lesson 05:</li>
             <li>Lesson 06:</li>
