--- a/week04/table-build.html
+++ b/week04/table-build.html
@@ -1,5 +1,11 @@
-<link rel="stylesheet" href="./table-build.css">
-<title>HTML Tables</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Tables</title>
+    <link rel="stylesheet" href="./table-build.css">
+</head>
 <table>
     <caption>Table 1: Account Feature Comparison</caption>
     <thead>
@@ -34,3 +40,4 @@
         </tr>
     </tbody>
 </table>
+</html>
